[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
strum = "0.23"
strum_macros = "0.23"
derive_more = "0.99.17"
maplit = "1.0.2"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
csv = "1.3.0"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
heck = "0.4"